overlay issue on mobile screens for hero + nav

--- a/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
@@ -53,6 +53,12 @@
             min-width:100%;
             z-index: 2 !important;
         }
+        @media screen and (max-width: 767px) {
+            .bg{
+                z-index: 1;
+            }
+        }
+
     }
     .ssb-page-section-layout-nav-hero [ssb-text-component] {
         width: 100%;
